--- a/feature_app/src/main/res/layout-land/activity_sign_up.xml
+++ b/feature_app/src/main/res/layout-land/activity_sign_up.xml
@@ -17,8 +17,8 @@
             android:hint="@string/tvusername"
             tools:ignore="MissingConstraints"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="44dp"
+            android:layout_marginEnd="144dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="144dp" android:layout_marginTop="12dp"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"/>
     <EditText
             android:layout_width="395dp"
@@ -28,10 +28,10 @@
             android:id="@+id/txtemail"
             android:hint="@string/txtHintEmail"
             tools:ignore="MissingConstraints"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtusername"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="144dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="144dp" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtusername" app:layout_constraintHorizontal_bias="0.0"/>
     <EditText
             android:layout_width="395dp"
             android:layout_height="wrap_content"
@@ -40,10 +40,10 @@
             android:id="@+id/txtconfirmpass"
             android:hint="@string/tvconfirm_password"
             tools:ignore="MissingConstraints"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtpass"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="144dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="144dp" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtpass"/>
     <EditText
             android:layout_width="395dp"
             android:layout_height="wrap_content"
@@ -53,8 +53,8 @@
             android:hint="@string/txtHintPassword"
             tools:ignore="MissingConstraints"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
+            android:layout_marginEnd="144dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="144dp" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/txtemail" app:layout_constraintHorizontal_bias="0.0"/>
 
     <Button
@@ -66,10 +66,11 @@
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
             android:onClick="goToMainScreenActvity"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="61dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="61dp" android:layout_marginTop="144dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass" app:layout_constraintHorizontal_bias="1.0"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="52dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/btncadastr" android:layout_marginTop="35dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginBottom="17dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
             android:text="@string/btnsign_up_with_google"
             android:textColor="#5555ff"
@@ -81,20 +82,19 @@
             android:textSize="18sp"
             android:onClick="goToMainScreenActvity"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="83dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="82dp" android:layout_marginTop="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnlogin" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginEnd="60dp" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass" android:layout_marginBottom="13dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:textSize="20dp"
             android:text="@string/tvsign_up"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="280dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="334dp" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
 
 
 </android.support.constraint.ConstraintLayout>
