--- a/feature_app/src/main/res/layout/conf_node.xml
+++ b/feature_app/src/main/res/layout/conf_node.xml
@@ -13,7 +13,7 @@
             android:orientation="vertical">
 
         <TextView
-                android:id="@+id/note_item_title"
+                android:id="@+id/conf_node_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="30dp"
