--- a/feature_app/src/main/res/layout/fragment_view_profile.xml
+++ b/feature_app/src/main/res/layout/fragment_view_profile.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/relLayout2"
+            android:id="@+id/rel_layHome"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true">
 
