--- a/feature_app/src/main/res/layout/layout_center_view_profile.xml
+++ b/feature_app/src/main/res/layout/layout_center_view_profile.xml
@@ -93,7 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/linLayout2"
-                    android:layout_marginBottom="50dp"
+
             >
 
                 <android.support.v7.widget.RecyclerView
@@ -101,6 +101,13 @@
                         android:id="@+id/list_home"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
+
+                <ProgressBar
+                        android:id="@+id/firstFragmentProgressBar"
+                        android:visibility="invisible"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
             </RelativeLayout>
 
