--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -7,17 +7,14 @@
         android:layout_height="match_parent">
 
 
-    <EditText
-            android:id="@+id/commentText"
-            android:layout_width="292dp"
-            android:layout_height="46dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="73dp"
-            app:layout_constraintEnd_toEndOf="parent" android:hint="City Name"/>
-
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/btn_choseimage"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="76dp" app:layout_constraintVertical_bias="0.204"
+            android:text="@string/btn_choseImage"/>
     <ImageView
             android:id="@+id/imageView"
             android:layout_width="288dp"
@@ -29,22 +26,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_account_circle_200dp"
-    />
+            app:layout_constraintHorizontal_bias="0.857" app:layout_constraintVertical_bias="0.267"/>
 
     <Button
-            android:id="@+id/button3"
+            android:id="@+id/btn_uploadimage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="upload"
             android:text="Upload"
-            tools:layout_editor_absoluteX="241dp"
-            tools:layout_editor_absoluteY="396dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="55dp"
-            android:layout_marginBottom="67dp"
-            app:layout_constraintEnd_toEndOf="parent" />
-
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="176dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/btn_choseimage"
+            android:layout_marginStart="8dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
