--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,25 +19,29 @@
             app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="1.0"
             android:src="@drawable/ic_account_circle_login"/>
     <EditText
-            android:layout_width="395dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/txtemail"
             android:hint="@string/txtHintEmail"
             android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtpass" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintBottom_toTopOf="@+id/txtpass"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <EditText
-            android:layout_width="395dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/txtpass"
             android:hint="@string/txtHintPassword"
-            tools:ignore="MissingConstraints" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            tools:ignore="MissingConstraints"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="268dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
@@ -48,32 +52,28 @@
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="68dp"
             app:layout_constraintTop_toBottomOf="@+id/txtpass"
             android:layout_marginEnd="8dp"
             android:onClick="signIn"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"/>
-    <Button
+            app:layout_constraintHorizontal_bias="0.525"/>
+    <com.google.android.gms.common.SignInButton
             android:text="@string/btnlogg"
             android:textColor="#5555ff"
-            android:background="@null"
-            android:layout_width="246dp"
-            android:layout_height="63dp"
-            android:id="@+id/btncadastr"
-            android:drawableLeft="@drawable/icons8google48"
-            android:textSize="18sp"
-            android:onClick="goToMainScreenActvity"
+            android:layout_width="286dp"
+            android:layout_height="54dp"
+            android:id="@+id/google_button"
             android:layout_marginBottom="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="80dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_photoform"
-            app:layout_constraintVertical_bias="0.76"
+            app:layout_constraintVertical_bias="0.481"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.961"/>
+    />
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
