--- a/app/src/main/res/layout/photo_entry.xml
+++ b/app/src/main/res/layout/photo_entry.xml
@@ -24,13 +24,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
         />
-        <!--<TextView
+        <TextView
                 android:id="@+id/tvName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
                 android:text="imagem"
-                android:textSize="20sp"/>-->
+                android:textSize="20sp"/>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
