--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -10,7 +10,7 @@
             android:id="@+id/img_uploaded"
             android:layout_width="match_parent"
             android:layout_height="360dp"
-            android:onClick="selectImage"
+            android:onClick="choseImage"
             app:srcCompat="@drawable/ic_upload"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/upload"
-            android:onClick="upload"
+            android:onClick="uploadImage"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
@@ -40,21 +40,17 @@
             app:layout_constraintStart_toEndOf="@+id/btn_uploadimage" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_uploaded"
             android:onClick="backScreen" app:layout_constraintVertical_bias="0.821"/>
-
-    <android.support.design.widget.TextInputLayout
+    <EditText
             android:layout_width="0dp"
-            android:layout_height="103dp"
+            android:layout_height="wrap_content"
+            android:inputType="text|textMultiLine"
+            android:ems="10"
+            android:id="@+id/textComment" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/img_uploaded" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
-            android:id="@+id/commentText">
-
-        <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/comment"/>
-    </android.support.design.widget.TextInputLayout>
+            app:layout_constraintBottom_toTopOf="@+id/btn_uploadimage" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.307" android:hint="@string/comment"/>
 
 
 </android.support.constraint.ConstraintLayout>
