--- a/app/src/main/res/layout/conf_node.xml
+++ b/app/src/main/res/layout/conf_node.xml
@@ -17,7 +17,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                tools:text="Descrição" />
+                android:textColor="@color/colorAccent"
+                android:text="@string/conf_logout"/>
 
     </LinearLayout>
 
