--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -6,7 +6,7 @@
 
     <ImageView
             android:layout_width="149dp"
-            android:layout_height="152dp" app:srcCompat="@drawable/caio"
+            android:layout_height="152dp"
             android:id="@+id/imageView5" android:src="@drawable/mateus" android:layout_marginStart="8dp"
             app:layout_constraintStart_toEndOf="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
@@ -16,12 +16,14 @@
             android:text="@string/tvTitlAbout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvTitlAbout" android:layout_marginEnd="176dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="177dp"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/tvTitlAbout" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageView5" app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintVertical_bias="0.545"/>
     <ImageView
             android:layout_width="149dp"
-            android:layout_height="152dp" app:srcCompat="@drawable/caio"
+            android:layout_height="152dp"
             android:id="@+id/imageView4" android:src="@drawable/caio" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/imageView5"
             android:layout_marginEnd="8dp" android:layout_marginBottom="360dp"
@@ -30,7 +32,7 @@
             app:layout_constraintVertical_bias="1.0"/>
     <TextView
             android:text="@string/tvTxtAb"
-            android:layout_width="191dp"
+            android:layout_width="263dp"
             android:layout_height="87dp"
             android:id="@+id/tvTxtAb" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
