--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -23,14 +23,17 @@
             android:layout_height="wrap_content"
             android:text="@string/upload"
             android:onClick="uploadImage"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@drawable/buttonshapecollor"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/btn_return" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/img_uploaded" app:layout_constraintVertical_bias="0.821"/>
+            app:layout_constraintTop_toBottomOf="@+id/img_uploaded" app:layout_constraintVertical_bias="0.617"/>
 
     <Button
-            android:layout_width="wrap_content"
+            android:layout_width="154dp"
             android:layout_height="wrap_content"
             android:id="@+id/btn_return"
             android:text="@string/btn_return"
@@ -38,8 +41,11 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintStart_toEndOf="@+id/btn_uploadimage" android:layout_marginStart="8dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@drawable/buttonshapecollor"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_uploaded"
-            android:onClick="backScreen" app:layout_constraintVertical_bias="0.821"/>
+            android:onClick="backScreen" app:layout_constraintVertical_bias="0.617"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -50,7 +56,7 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/img_uploaded" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/btn_uploadimage" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.307" android:hint="@string/comment"/>
+            app:layout_constraintVertical_bias="0.489" android:hint="@string/comment"/>
 
 
 </android.support.constraint.ConstraintLayout>
