--- a/app/src/main/res/layout/photo_formulary.xml
+++ b/app/src/main/res/layout/photo_formulary.xml
@@ -49,7 +49,33 @@
             android:id="@+id/txt_phoneform" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.0" tools:layout_editor_absoluteY="458dp"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginBottom="184dp" app:layout_constraintBottom_toBottomOf="parent"/>
+    <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@drawable/buttonshapecollor"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txt_phoneform" app:layout_constraintEnd_toStartOf="@+id/button2"
+            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"/>
+    <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2" android:layout_marginBottom="8dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@drawable/buttonshapecollor"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txt_phoneform" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button"
+            android:layout_marginStart="8dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
