--- a/app/src/main/res/layout/activity_formulary.xml
+++ b/app/src/main/res/layout/activity_formulary.xml
@@ -4,13 +4,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:id="@+id/fragFormulary"
         android:layout_height="match_parent"
         android:alpha="1"
-        tools:context=".SignUpActivity">
+        tools:context=".FormularyActivity">
 
     <android.support.design.widget.TextInputLayout
             android:layout_width="395dp"
-            android:layout_height="122dp"
+            android:layout_height="98dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.0" android:id="@+id/textInputLayout"
@@ -25,10 +26,11 @@
     <ImageView
             android:layout_width="119dp"
             android:layout_height="128dp" app:srcCompat="@drawable/ic_account_circle_200dp"
-            android:id="@+id/img_photoform" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"/>
+            android:id="@+id/img_photoform"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="2dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
+            app:layout_constraintEnd_toStartOf="@+id/tv_author" android:layout_marginEnd="8dp"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -52,10 +54,10 @@
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginBottom="184dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
-            android:text="Button"
+            android:text="@string/btnsubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
+            android:id="@+id/btnsubmit"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:textStyle="bold"
@@ -65,8 +67,8 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_phoneform" app:layout_constraintEnd_toStartOf="@+id/button2"
             android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"/>
     <Button
-            android:text="Button"
-            android:layout_width="wrap_content"
+            android:text="@string/btn_return"
+            android:layout_width="147dp"
             android:layout_height="wrap_content"
             android:id="@+id/button2" android:layout_marginBottom="8dp"
             android:textStyle="bold"
@@ -74,8 +76,18 @@
             android:background="@drawable/buttonshapecollor"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_phoneform" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/btnsubmit"
+            android:layout_marginStart="8dp" android:onClick="FormToBackScreen"/>
+    <TextView
+            android:text="Author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_author" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
+            app:layout_constraintStart_toEndOf="@+id/img_photoform" android:layout_marginStart="8dp"
+            app:layout_constraintVertical_bias="0.476" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
 
 
 </android.support.constraint.ConstraintLayout>
