--- a/app/src/main/res/layout/photo_node.xml
+++ b/app/src/main/res/layout/photo_node.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
+        android:id="@+id/photo_card"
+        android:background="@color/colorPrimaryDark"
         android:layout_height="wrap_content">
 
     <LinearLayout
@@ -12,7 +14,8 @@
             android:layout_margin="10dp"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -22,7 +25,8 @@
                 android:layout_height="wrap_content" android:id="@+id/tv_authorUser"/>
         <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="180dp" app:srcCompat="@drawable/ic_about" tools:layout_editor_absoluteY="102dp"
+                android:layout_height="180dp" app:srcCompat="@drawable/ic_about"
+                tools:layout_editor_absoluteY="102dp"
                 tools:layout_editor_absoluteX="43dp" android:id="@+id/imgv_posted"/>
         <TextView
                 android:text="TextView"
@@ -31,4 +35,4 @@
                 tools:layout_editor_absoluteX="43dp" android:id="@+id/tv_comment"/>
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
