--- a/app/src/main/res/layout/activity_formulary.xml
+++ b/app/src/main/res/layout/activity_formulary.xml
@@ -9,28 +9,14 @@
         android:alpha="1"
         tools:context=".FormularyActivity">
 
-    <android.support.design.widget.TextInputLayout
-            android:layout_width="395dp"
-            android:layout_height="98dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/textInputLayout"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_photoform"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_emailform">
-
-        <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_form" android:id="@+id/txt_form"/>
-    </android.support.design.widget.TextInputLayout>
     <ImageView
-            android:layout_width="119dp"
-            android:layout_height="128dp" app:srcCompat="@drawable/ic_account_circle_200dp"
+            android:layout_width="142dp"
+            android:layout_height="139dp" app:srcCompat="@drawable/ic_account_circle_200dp"
             android:id="@+id/img_photoform"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="2dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
-            app:layout_constraintEnd_toStartOf="@+id/tv_author" android:layout_marginEnd="8dp"/>
+            android:layout_marginStart="2dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tv_author" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.329"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -40,7 +26,6 @@
             android:id="@+id/txt_emailform" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_phoneform"/>
     <EditText
             android:layout_width="0dp"
@@ -65,7 +50,8 @@
             android:background="@drawable/buttonshapecollor"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_phoneform" app:layout_constraintEnd_toStartOf="@+id/button2"
-            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"/>
+            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"
+            android:onClick="SubmitFormulary"/>
     <Button
             android:text="@string/btn_return"
             android:layout_width="147dp"
@@ -82,12 +68,23 @@
             android:text="Author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_author" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
-            app:layout_constraintStart_toEndOf="@+id/img_photoform" android:layout_marginStart="8dp"
-            app:layout_constraintVertical_bias="0.476" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
+            android:id="@+id/tv_author" android:layout_marginTop="80dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="88dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/text_form"
+            app:layout_constraintVertical_bias="0.0"/>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/text_form"
+            android:hint="@string/hint_form" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_emailform"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_photoform"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.205"/>
 
 
 </android.support.constraint.ConstraintLayout>
